Tue Jan 25 01:38:58 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* storage.c (c_alloc): Don't give an error on negative or zero field
	sizes.
	* regression/tests_pass/record_basic.s: Enhance test for negative and
	0 field sizes.
	* commands.c (c_incbin): Fix BIN/INCBIN implementation.
	* regression/tests_pass/bin.s, regression/tests_pass/include/def.txt:
	Add BIN/INCBIN tests.
	* symbol.c (NeedToOutputSymbol): Centralizes the decision which symbols
	need to be included in the output.
	(SYMBOL_OUTPUT, SYMBOL_ELF_OUTPUT, SYMBOL_AOF_OUTPUT): Remove.
	(findAreaIndex): Remove.
	(symbolSymbolELFOutput): Use the upfront calculated section number
	instead of calling findAreaIndex.
	* output.c (outputInit): Try to recognize RISC OS filename syntax.
	(writeElfSH): Proper upfront calculation of section number for all our
	areas.
	* main.c, main.h (ProgName): Remove.

Fri Jan 21 03:20:48 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* area.c (Area_AlignTo): Fix zeroing of memory. Fix updating area end.

Sun Jan 16 23:30:44 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* depend.c (dependWrite): Write one long dependency line instead of
	using continuation character.  Looks like this is more amu friendly.
	* filestack.c (ReportFSStack): Added (for debug purposes).
	(FS_PushFilePObject): Initialise PObject::type.
	* input.c (inputVarSub): When variable is not known, report this as
	a warning, not an error.  Vertical bars in string should also disable
	variable substitution.
	(inputSymbol): Never process further than a semi-column.
	* regression/tests_pass/macro_args.s: Enhance test.
	* regression/tests_pass/variable_substitution.s: Enhance test.

Sun Jan 16 15:23:32 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* m_cpuctrl.c (branch_shared): Drop support for " and #.
	* whileif.c (while_skip): Make use of inputNextLineNoSubst instead of
	inputNextLine.
	* input.c (inputVarSub): Don't corrupt input_pos, only temporarily
	change it.